edit number two

--- a/index.html
+++ b/index.html
@@ -864,8 +864,10 @@
     </div>
     <!-- end event -->
     <!-- start pricing -->
-    <div class="pricing">
+    <div class="pricing" id="pricing">
       <div class="main-anim">pricing plan</div>
+      <div class="dots dots-up"></div>
+      <div class="dots dots-down"></div>
       <div class="container">
         <!--  -->
         <div class="box">
@@ -919,6 +921,122 @@
       </div>
     </div>
     <!-- end pricing -->
+    <!-- start top video -->
+    <div class="top-video" id="top-video">
+      <div class="main-anim">top video</div>
+      <div class="container">
+        <div class="hol">
+          <div class="list">
+            <div class="top">
+              Top Video
+              <i class="fas fa-random"></i>
+            </div>
+            <ul>
+              <li>
+                How To Create Sub Domain
+                <span>05:18</span>
+              </li>
+
+              <li>
+                Playing With The DNS
+                <span>03:38</span>
+              </li>
+
+              <li>
+                Everything About The Virtual Hosts
+                <span>07:18</span>
+              </li>
+
+              <li>
+                How To Monitor Your Website
+                <span>2:14</span>
+              </li>
+
+              <li>
+                Uncharted Beating The Last Boss
+                <span>7:12</span>
+              </li>
+              <li>
+                Ys Oath In Felghana Overview
+                <span>9:48</span>
+              </li>
+              <li>
+                Ys Series All Games Ending
+                <span>4:37</span>
+              </li>
+            </ul>
+          </div>
+          <div class="preview">
+            <img src="./imgs/video-preview.jpg" alt="" />
+            <div class="info">Everything About The Virtual Hosts</div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- end top video -->
+    <!-- start stats -->
+    <div class="stats" id="stats">
+      <h2 class="main-anim">Our Awesome Stats</h2>
+      <div class="container">
+        <!--  -->
+        <div class="box">
+          <i class="far fa-user fa-2x fa-fw"></i>
+          <span>150</span>
+          <span>Client</span>
+        </div>
+        <!--  -->
+        <!--  -->
+        <div class="box">
+          <i class="fas fa-code fa-2x fa-fw"></i>
+          <span>135</span>
+          <span>Projects</span>
+        </div>
+        <!--  -->
+        <!--  -->
+        <div class="box">
+          <i class="fas fa-globe-asia fa-2x fa-fw"></i>
+          <span>50</span>
+          <span>Countries</span>
+        </div>
+        <!--  -->
+        <!--  -->
+        <div class="box">
+          <i class="far fa-user fa-2x fa-fw"></i>
+          <span>500</span>
+          <span>Money</span>
+        </div>
+        <!--  -->
+      </div>
+    </div>
+    <!-- end stats -->
+    <!-- start request -->
+    <div class="request" id="request">
+      <div class="image">
+        <div class="content">
+          <h2>We Have A Discount</h2>
+          <p>
+         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempore assumenda quod praesentium porro voluptas mollitia earum cumque? Quaerat perspiciatis corporis accusantium nam sunt explicabo distinctio itaque aut.
+          </p>
+          <img src="./imgs/discount.png" alt="" />
+        </div>
+      </div>
+      <!--  -->
+      <div class="form">
+        <h1>Request A Discount</h1>
+        <input type="text" name="text" id="" placeholder="Your Name" />
+        <input type="email" name="email" id="" placeholder="Your Email" />
+        <input type="text" name="text" id="" placeholder="Your Phone" />
+        <textarea
+          name=""
+          id=""
+          cols="30"
+          rows="10"
+          placeholder="Tell Us About Your Need"
+        ></textarea>
+        <input type="submit" value="Send" />
+      </div>
+    </div>
+    <!-- end request -->
   </body>
   <script src="./js/tilt.js"></script>
   <script src="./js/index.js"></script>
