--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./css/all.min.css" />
     <link rel="stylesheet" href="./css/normalize.css" />
     <link rel="stylesheet" href="./css/index.css" />
+    <link rel="stylesheet" href="./css/index.css.map" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <!-- <link
@@ -1012,15 +1013,20 @@
     <!-- start request -->
     <div class="request" id="request">
       <div class="image">
+        <img class="img2" src="./imgs/discount-background2.jpg" alt="" />
         <div class="content">
           <h2>We Have A Discount</h2>
           <p>
-         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempore assumenda quod praesentium porro voluptas mollitia earum cumque? Quaerat perspiciatis corporis accusantium nam sunt explicabo distinctio itaque aut.
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempore
+            assumenda quod praesentium porro voluptas mollitia earum cumque?
+            Quaerat perspiciatis corporis accusantium nam sunt explicabo
+            distinctio itaque aut.
           </p>
           <img src="./imgs/discount.png" alt="" />
         </div>
       </div>
       <!--  -->
+
       <div class="form">
         <h1>Request A Discount</h1>
         <input type="text" name="text" id="" placeholder="Your Name" />
@@ -1037,6 +1043,58 @@
       </div>
     </div>
     <!-- end request -->
+    <!-- start footer -->
+    <div class="footer">
+      <div class="container">
+        <div class="box">
+          <h2>Yousef</h2>
+          <div class="icons">
+            <a href="#" class="facebook"><i class="fab fa-facebook-f"></i></a>
+            <a href="#" class="twitter"><i class="fab fa-twitter"></i></a>
+            <a href="#" class="youtupe"><i class="fab fa-youtube"></i></a>
+          </div>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo numquam
+            doloremque officia deserunt eum,
+          </p>
+        </div>
+        <div class="box">
+          <ul>
+            <li><a href="#">Important Link 1</a></li>
+            <li><a href="#">Important Link 2</a></li>
+            <li><a href="#">Important Link 3</a></li>
+            <li><a href="#">Important Link 4</a></li>
+          </ul>
+        </div>
+        <div class="box">
+          <div class="info">
+            <i class="fas fa-map-marker-alt fa-fw"></i>
+            <p>Egypt, Giza, Inside The Sphinx, Room Number 220</p>
+          </div>
+          <div class="info">
+            <i class="far fa-clock fa-fw"></i>
+            <p>Business Hours: From 10:00 To 18:00</p>
+          </div>
+          <div class="info">
+            <i class="fas fa-phone-volume fa-fw"></i>
+            <div>
+              <span>+20123456789</span>
+              <span>+20198765432</span>
+            </div>
+          </div>
+        </div>
+        <div class="box">
+          <img src="./imgs/gallery-01.png" alt="no image exist" width="78px" />
+          <img src="./imgs/gallery-02.png" alt="no image exist" width="78px" />
+          <img src="./imgs/gallery-03.jpg" alt="no image exist" width="78px" />
+          <img src="./imgs/gallery-04.png" alt="no image exist" width="78px" />
+          <img src="./imgs/gallery-05.jpg" alt="no image exist" width="78px" />
+          <img src="./imgs/gallery-06.png" alt="no image exist" width="78px" />
+        </div>
+      </div>
+    </div>
+
+    <!-- end footer -->
   </body>
   <script src="./js/tilt.js"></script>
   <script src="./js/index.js"></script>
