modified:   index.html

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     <div class="landing">
       <div class="container">
         <div class="text">
-          <h2>welcome, to elzero world</h2>
+          <h2>welcome, to Yousef world</h2>
           <p>
             Here Iam gonna share everything about my life. Books Iam reading,
             Games Iam Playing, Stories and Events
@@ -1092,6 +1092,7 @@
           <img src="./imgs/gallery-06.png" alt="no image exist" width="78px" />
         </div>
       </div>
+      <div class="foot">Made By Yousef</div>
     </div>
 
     <!-- end footer -->
