edit in js file

--- a/index.html
+++ b/index.html
@@ -813,28 +813,28 @@
           <div class="time">
             <div class="unit">
               <div class="days">
-                <span>365</span>
+                <span  class="day">365</span>
                 <span>days</span>
               </div>
             </div>
             <!--  -->
             <div class="unit">
               <div class="hours">
-                <span>24</span>
+                <span class="hour">24</span>
                 <span>hours</span>
               </div>
             </div>
             <!--  -->
             <div class="unit">
               <div class="minutes">
-                <span>60</span>
+                <span class="minute">60</span>
                 <span>minutes</span>
               </div>
             </div>
             <!--  -->
             <div class="unit">
               <div class="seconds">
-                <span>60</span>
+                <span class="second">60</span>
                 <span>seconds</span>
               </div>
             </div>
