--- a/index.html
+++ b/index.html
@@ -840,7 +840,7 @@
             </div>
             <!--  -->
           </div>
-          <h2>Tech Masters Event 2021</h2>
+          <h2>Tech Masters Event 2022</h2>
           <p>
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ducimus
             velit neque repudiandae perspiciatis autem corporis fugiat
@@ -982,28 +982,28 @@
         <!--  -->
         <div class="box">
           <i class="far fa-user fa-2x fa-fw"></i>
-          <span>150</span>
+          <span data-goal="150">0</span>
           <span>Client</span>
         </div>
         <!--  -->
         <!--  -->
         <div class="box">
           <i class="fas fa-code fa-2x fa-fw"></i>
-          <span>135</span>
+          <span data-goal="135">0</span>
           <span>Projects</span>
         </div>
         <!--  -->
         <!--  -->
         <div class="box">
           <i class="fas fa-globe-asia fa-2x fa-fw"></i>
-          <span>50</span>
+          <span data-goal="50">0</span>
           <span>Countries</span>
         </div>
         <!--  -->
         <!--  -->
         <div class="box">
-          <i class="far fa-user fa-2x fa-fw"></i>
-          <span>500</span>
+          <i class="far fa-money-bill-alt fa-2x fa-fw"></i>
+          <span data-goal="500">0</span>
           <span>Money</span>
         </div>
         <!--  -->
