--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="./imgs/download.jfif" />
-    <link rel="stylesheet" href="./index.css" />
     <link rel="stylesheet" href="./css/all.min.css" />
     <link rel="stylesheet" href="./css/normalize.css" />
     <link rel="stylesheet" href="./css/index.css" />
@@ -116,7 +115,7 @@
           </p>
         </div>
         <div class="image">
-          <img src="./imgs/landing-image.png" alt="there is no image" />
+          <img src="./imgs//work-steps.png" alt="there is no image" />
         </div>
         <a href="#article"><i class="fas fa-angle-double-down fa-2x"></i></a>
       </div>
